[package]
name = "ntex-mqtt"
version = "6.1.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Client and Server framework for MQTT v5 and v3.1.1 protocols"
documentation = "https://docs.rs/ntex-mqtt"
repository = "https://github.com/ntex-rs/ntex-mqtt.git"
categories = ["network-programming"]
keywords = ["MQTT", "IoT", "messaging"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
features = ["ntex-net/tokio"]

[dependencies]
ntex-io = "3"
ntex-net = "3"
ntex-util = "3"
ntex-service = "3.7"
ntex-bytes = "1"
ntex-codec = "1"
ntex-router = "1"
ntex-rt = "3"
bitflags = "2"
log = "0.4"
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
rand = "0.8"
env_logger = "0.11"
ntex-tls = "3"
openssl = "0.10"
test-case = "3.2"
ntex = { version = "3.0.0-pre.2", features = ["openssl"] }
