[package]
name = "ntex-mqtt"
version = "7.0.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Client and Server framework for MQTT v5 and v3.1.1 protocols"
documentation = "https://docs.rs/ntex-mqtt"
repository = "https://github.com/ntex-rs/ntex-mqtt.git"
categories = ["network-programming"]
keywords = ["MQTT", "IoT", "messaging"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.88"

[package.metadata.docs.rs]
features = ["ntex-net/tokio"]

[dependencies]
ntex-io = "3.5"
ntex-net = "3.5"
ntex-util = "3.4"
ntex-service = "4"
ntex-bytes = "1.4"
ntex-codec = "1.1"
ntex-router = "1"
ntex-rt = "3.5"
bitflags = "2"
log = "0.4"
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
rand = "0.8"
env_logger = "0.11"
ntex-tls = "3"
openssl = "0.10"
oneshot = "0.1"
test-case = "3.2"
ntex = { version = "3.0.0-pre.14", features = ["openssl"] }
